--- a/blockPhysics.cabal
+++ b/blockPhysics.cabal
@@ -19,6 +19,6 @@ executable blockPhysics
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.7 && <4.8,gloss,containers,mtl,transformers,hmatrix-quadprogpp,hmatrix
+  build-depends:       base >=4.7 && <4.8,gloss,containers,mtl,transformers,hmatrix-quadprogpp,hmatrix,lens
   -- hs-source-dirs:      
   default-language:    Haskell2010
