--- a/blockPhysics.cabal
+++ b/blockPhysics.cabal
@@ -19,6 +19,7 @@ executable blockPhysics
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.7 && <4.8,gloss,containers,mtl,transformers,hmatrix-quadprogpp,hmatrix,lens,safe
+  build-depends:       base >=4.7 && <4.8,gloss,containers,mtl,transformers,hmatrix-quadprogpp,hmatrix,lens,safe,ieee754
   -- hs-source-dirs:      
   default-language:    Haskell2010
+  GHC-Options: -Wall
