--- a/blockPhysics.cabal
+++ b/blockPhysics.cabal
@@ -6,7 +6,7 @@ version:             0.1.0.0
 -- synopsis:            
 -- description:         
 -- license:             
-license-file:        LICENSE
+-- license-file:     LICENSE
 author:              Roger
 -- maintainer:          
 -- copyright:           
@@ -18,8 +18,8 @@ cabal-version:       >=1.10
 executable blockPhysics
   main-is:             Main.hs
   -- other-modules:       
-  -- other-extensions:    
-  build-depends:       base >=4.7 && <4.8,gloss,containers,mtl,transformers,hmatrix-quadprogpp,hmatrix,lens,safe,ieee754
+  extensions:          FlexibleContexts
+  build-depends:       base >=4.7 ,gloss,containers,mtl,transformers,hmatrix-quadprogpp,hmatrix,lens,safe,ieee754
   -- hs-source-dirs:      
   default-language:    Haskell2010
   GHC-Options: -Wall
