--- a/blockPhysics.cabal
+++ b/blockPhysics.cabal
@@ -15,11 +15,46 @@ build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
 
-executable blockPhysics
+library
+  hs-source-dirs:      src
+  exposed-modules:     Physics,
+                       Render,
+                       World
+  default-extensions:  FlexibleContexts
+  build-depends:       base >=4.7 && < 5,
+                       gloss,
+                       containers,
+                       mtl,
+                       transformers,
+                       hmatrix-quadprogpp,
+                       hmatrix,
+                       lens,
+                       safe,
+                       ieee754
+  default-language:    Haskell2010
+  GHC-Options: -Wall
+
+executable blockPhysics-exe
   main-is:             Main.hs
-  -- other-modules:       
-  extensions:          FlexibleContexts
-  build-depends:       base >=4.7 ,gloss,containers,mtl,transformers,hmatrix-quadprogpp,hmatrix,lens,safe,ieee754
-  -- hs-source-dirs:      
+  default-extensions:  FlexibleContexts
+  build-depends:       base >=4.7 && < 5,
+                       blockPhysics,
+                       gloss,
+                       containers,
+                       mtl,
+                       transformers,
+                       lens
+  default-language:    Haskell2010
+  GHC-Options: -Wall
+
+test-suite blockPhysics-test
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             Spec.hs
+  build-depends:       base >=4.7 && < 5,
+                       blockPhysics,
+                       hspec,
+                       QuickCheck
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
   GHC-Options: -Wall
