--- a/blockPhysics.cabal
+++ b/blockPhysics.cabal
@@ -30,7 +30,8 @@ library
                        hmatrix,
                        lens,
                        safe,
-                       ieee754
+                       ieee754,
+                       QuickCheck
   default-language:    Haskell2010
   GHC-Options: -Wall
 
