--- a/blockPhysics.cabal
+++ b/blockPhysics.cabal
@@ -55,8 +55,11 @@ test-suite blockPhysics-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base >=4.7 && < 5,
-                       blockPhysics,
+                       containers,
+                       mtl,
+                       lens,
                        hspec,
+                       blockPhysics,
                        QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
