--- a/blockPhysics.cabal
+++ b/blockPhysics.cabal
@@ -21,7 +21,8 @@ library
                        Render,
                        World,
                        Waldo,
-                       Utils
+                       Utils,
+                       Map2D
   default-extensions:  FlexibleContexts
   build-depends:       base >=4.7 && < 5,
                        gloss,
@@ -36,6 +37,7 @@ library
                        QuickCheck
   default-language:    Haskell2010
   GHC-Options: -Wall
+               -fprof-auto
 
 executable blockPhysics-exe
   main-is:             Main.hs
@@ -64,3 +66,18 @@ test-suite blockPhysics-test
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
   GHC-Options: -Wall
+
+Benchmark blockPhysics-bench
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      bench
+  main-is:             Bench.hs
+  build-depends:       base >=4.7 && < 5,
+                       blockPhysics,
+                       containers,
+                       mtl,
+                       lens,
+                       blockPhysics,
+                       criterion
+  default-language:    Haskell2010
+  GHC-Options: -Wall
+               -fprof-auto
