--- a/blockPhysics.cabal
+++ b/blockPhysics.cabal
@@ -22,7 +22,8 @@ library
                        World,
                        Waldo,
                        Utils,
-                       Map2D
+                       Map2D,
+                       PolynomialRoot
   default-extensions:  FlexibleContexts
   build-depends:       base >=4.7 && < 5,
                        gloss,
@@ -34,6 +35,7 @@ library
                        lens,
                        safe,
                        ieee754,
+                       polynomial,
                        QuickCheck
   default-language:    Haskell2010
   GHC-Options: -Wall
@@ -60,6 +62,9 @@ test-suite blockPhysics-test
                        containers,
                        mtl,
                        lens,
+                       safe,
+                       ieee754,
+                       polynomial,
                        hspec,
                        blockPhysics,
                        QuickCheck
