--- a/blockPhysics.cabal
+++ b/blockPhysics.cabal
@@ -67,6 +67,7 @@ test-suite blockPhysics-test
                        ieee754,
                        polynomial,
                        hspec,
+                       gloss,
                        blockPhysics,
                        QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
